# computer-vision-workshop

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
01_classification/: README.md
01_classification/src/: app.py  config.yaml  dataset.py  main.py  train.py  trainer.py
02_object_detection/: README.md
02_object_detection/src/: app.py  config.yaml  main.py
03_segmentation/: README.md
03_segmentation/src/: app.py  config.yaml  dataset.py  main.py  transforms.py
assets/: iou.avif
