[tool.poetry]
name = "computer-vision-workshop"
version = "0.1.0"
description = ""
authors = ["Taheera Ahmed <taheera.ahmed@nina.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.5.0.post0"
torchvision = "^0.20.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
